==> MaxPayne86Arduino/meta-arduino/meta-arduino-bsp/recipes-kernel/kernel-modules/lan865x/src/lan865x.c <==
#include <linux/module.h>
#include <linux/kernel.h>
#include <linux/etherdevice.h>
#include <linux/mdio.h>
#include <linux/phy.h>
#include <linux/of.h>
#include "oa_tc6.h"
#define DRV_NAME		"lan865x"
#define DRV_VERSION		"0.2"
#define LAN865X_REV_B0		0x1
#define LAN865X_REV_B1		0x2
#define PHY_ID_LAN865X_REVB	0x0007C1B3
#define REG_STDR_RESET		0x00000003
#define REG_MAC_ADDR_BO		0x00010022
#define REG_MAC_ADDR_L		0x00010024
#define REG_MAC_ADDR_H		0x00010025
#define REG_MAC_NW_CTRL         0x00010000
#define REG_MAC_NW_CONFIG	0x00010001
#define REG_MAC_HASHL		0x00010020
#define REG_MAC_HASHH		0x00010021
#define REG_MAC_ADDR_BO		0x00010022
#define REG_MAC_ADDR_L		0x00010024
#define REG_MAC_ADDR_H		0x00010025
#define CCS_Q0_TX_CFG		0x000A0081
#define CCS_Q0_RX_CFG		0x000A0082
#define REG_CCS_DEVID		0x000A0094
#define LAN86XX_DISABLE_COL_DET		0x0000
#define LAN86XX_ENABLE_COL_DET		0x0083
#define LAN86XX_REG_COL_DET_CTRL0	0x0087
#define CCS_Q0_TX_CFG_32	0x70000000
#define CCS_Q0_RX_CFG_32	0x30000C00
#define NW_RX_STATUS		BIT(2)
#define NW_TX_STATUS		BIT(3)
#define NW_DISABLE		0x0
#define MAC_PROMISCUOUS_MODE	BIT(4)
#define MAC_MULTICAST_MODE	BIT(6)
#define MAC_UNICAST_MODE	BIT(7)
#define LAN865X_REV_ID		GENMASK(3, 0)
#define TX_TIMEOUT		(4 * HZ)
#define LAN865X_MSG_DEFAULT	\
	(NETIF_MSG_PROBE | NETIF_MSG_IFUP | NETIF_MSG_IFDOWN | NETIF_MSG_LINK)

static int lan865x_set_hw_macaddr(struct net_device *netdev)
{
	u32 regval;
	bool ret;
	struct lan865x_priv *priv = netdev_priv(netdev);
	const u8 *mac = netdev->dev_addr;

	ret = oa_tc6_read_register(priv->tc6, REG_MAC_NW_CTRL, &regval, 1);
	if (ret)
		goto error_mac;
	if ((regval & NW_TX_STATUS) | (regval & NW_RX_STATUS)) {
		if (netif_msg_drv(priv))
			netdev_warn(netdev, "Hardware must be disabled for MAC setting\n");
		return -EBUSY;
	}
	/* MAC address setting */
	regval = (mac[3] << 24) | (mac[2] << 16) | (mac[1] << 8) |
		mac[0];
	ret = oa_tc6_write_register(priv->tc6, REG_MAC_ADDR_L, &regval, 1);
	if (ret)
		goto error_mac;

	regval = (mac[5] << 8) | mac[4];
	ret = oa_tc6_write_register(priv->tc6, REG_MAC_ADDR_H, &regval, 1);
	if (ret)
		goto error_mac;

	regval = (mac[5] << 24) | (mac[4] << 16) |
		(mac[3] << 8) | mac[2];
	ret = oa_tc6_write_register(priv->tc6, REG_MAC_ADDR_BO, &regval, 1);
	if (ret)
		goto error_mac;

	return 0;

error_mac:
	return -ENODEV;
}

static int lan865x_set_mac_address(struct net_device *netdev, void *addr)
{
	struct sockaddr *address = addr;

	if (netif_running(netdev))
		return -EBUSY;
	if (!is_valid_ether_addr(address->sa_data))
		return -EADDRNOTAVAIL;

	eth_hw_addr_set(netdev, address->sa_data);
	return lan865x_set_hw_macaddr(netdev);
}

static void lan865x_set_multicast_list(struct net_device *netdev)
{
	struct lan865x_priv *priv = netdev_priv(netdev);
	u32 regval = 0;

	if (netdev->flags & IFF_PROMISC) {
		/* Enabling promiscuous mode */
		regval |= MAC_PROMISCUOUS_MODE;
		regval &= (~MAC_MULTICAST_MODE);
		regval &= (~MAC_UNICAST_MODE);
	} else if (netdev->flags & IFF_ALLMULTI) {
		/* Enabling all multicast mode */
		regval &= (~MAC_PROMISCUOUS_MODE);
		regval |= MAC_MULTICAST_MODE;
		regval &= (~MAC_UNICAST_MODE);
	} else if (!netdev_mc_empty(netdev)) {
		/* Enabling specific multicast addresses */
		struct netdev_hw_addr *ha;
		u32 hash_lo = 0;
		u32 hash_hi = 0;

		netdev_for_each_mc_addr(ha, netdev) {
			u32 bit_num = lan865x_hash(ha->addr);
			u32 mask = 1 << (bit_num & 0x1f);

			if (bit_num & 0x20)
				hash_hi |= mask;
			else
				hash_lo |= mask;
		}
		if (oa_tc6_write_register(priv->tc6, REG_MAC_HASHH, &hash_hi, 1)) {
			if (netif_msg_timer(priv))
				netdev_err(netdev, "Failed to write reg_hashh");
			return;
		}
		if (oa_tc6_write_register(priv->tc6, REG_MAC_HASHL, &hash_lo, 1)) {
			if (netif_msg_timer(priv))
				netdev_err(netdev, "Failed to write reg_hashl");
			return;
		}
		regval &= (~MAC_PROMISCUOUS_MODE);
		regval &= (~MAC_MULTICAST_MODE);
		regval |= MAC_UNICAST_MODE;
	} else {
		regval = 0;
		/* enabling local mac address only */
		if (oa_tc6_write_register(priv->tc6, REG_MAC_HASHH, &regval, 1)) {
			if (netif_msg_timer(priv))
				netdev_err(netdev, "Failed to write reg_hashh");
			return;
		}
		if (oa_tc6_write_register(priv->tc6, REG_MAC_HASHL, &regval, 1)) {
			if (netif_msg_timer(priv))
				netdev_err(netdev, "Failed to write reg_hashl");
			return;
		}
		regval &= (~MAC_PROMISCUOUS_MODE);
		regval &= (~MAC_MULTICAST_MODE);
		regval &= (~MAC_UNICAST_MODE);
	}
	if (oa_tc6_write_register(priv->tc6, REG_MAC_NW_CONFIG, &regval, 1)) {
		if (netif_msg_timer(priv))
			netdev_err(netdev, "Failed to enable promiscuous mode");
	}
}

static int lan865x_hw_disable(struct lan865x_priv *priv)
{
	u32 regval = NW_DISABLE;

	if (oa_tc6_write_register(priv->tc6, REG_MAC_NW_CTRL, &regval, 1))
		return -ENODEV;

	return 0;
}

static int lan865x_hw_enable(struct lan865x_priv *priv)
{
	u32 regval = NW_TX_STATUS | NW_RX_STATUS;

	if (oa_tc6_write_register(priv->tc6, REG_MAC_NW_CTRL, &regval, 1))
		return -ENODEV;

	return 0;
}

static int lan865x_probe(struct spi_device *spi)
{
	struct net_device *netdev;
	struct lan865x_priv *priv;
	u32 regval;
	int ret;

	netdev = alloc_etherdev(sizeof(struct lan865x_priv));
	if (!netdev)
		return -ENOMEM;

	priv = netdev_priv(netdev);
	priv->netdev = netdev;
	priv->spi = spi;
	priv->msg_enable = netif_msg_init(debug.msg_enable,
					  LAN865X_MSG_DEFAULT);
	spi_set_drvdata(spi, priv);
	SET_NETDEV_DEV(netdev, &spi->dev);

	ret = lan865x_get_dt_data(priv);
	if (ret)
		return ret;

	// Toggle reset
	if (priv->reset_gpio) {
		gpiod_set_value_cansleep(priv->reset_gpio, 1);
		msleep(100); // Hold reset for 100ms
		gpiod_set_value_cansleep(priv->reset_gpio, 0);
		msleep(100); // Wait for 100ms after releasing reset
	}

	spi->rt = true;
	spi_setup(spi);

	priv->tc6 = oa_tc6_init(spi, netdev);
	if (!priv->tc6) {
		ret = -ENOMEM;
		goto error_oa_tc6_init;
	}

	if (priv->cps == 32) {
		regval = CCS_Q0_TX_CFG_32;
		ret = oa_tc6_write_register(priv->tc6, CCS_Q0_TX_CFG, &regval, 1);
		if (ret)
			return ret;

		regval = CCS_Q0_RX_CFG_32;
		ret = oa_tc6_write_register(priv->tc6, CCS_Q0_RX_CFG, &regval, 1);
		if (ret)
			return ret;
	}

	if (oa_tc6_configure(priv->tc6, priv->cps, priv->protected, priv->tx_cut_thr_mode,
			     priv->rx_cut_thr_mode))
		goto err_macphy_config;

	ret = lan865x_phy_init(priv);
	if (ret)
		goto error_phy;

	ret = lan865x_phy_fixup(priv->phydev);
	if (ret)
		goto error_phy_fixup;

	if (device_get_ethdev_address(&spi->dev, netdev))
		eth_hw_addr_random(netdev);

	ret = lan865x_set_hw_macaddr(netdev);
	if (ret) {
		if (netif_msg_probe(priv))
			dev_err(&spi->dev, "Failed to configure MAC");
		goto error_set_mac;
	}

	netdev->if_port = IF_PORT_10BASET;
	netdev->irq = spi->irq;
	netdev->netdev_ops = &lan865x_netdev_ops;
	netdev->watchdog_timeo = TX_TIMEOUT;
	netdev->ethtool_ops = &lan865x_ethtool_ops;
	ret = register_netdev(netdev);
	if (ret) {
		if (netif_msg_probe(priv))
			dev_err(&spi->dev, "Register netdev failed (ret = %d)",
				ret);
		goto error_netdev_register;
	}

	phy_start(priv->phydev);
	return 0;

error_netdev_register:
error_phy_fixup:
error_set_mac:
	phy_disconnect(priv->phydev);
	mdiobus_unregister(priv->mdiobus);
	mdiobus_free(priv->mdiobus);
error_phy:
err_macphy_config:
	oa_tc6_deinit(priv->tc6);
error_oa_tc6_init:
	free_netdev(priv->netdev);
	return ret;
}

static void lan865x_remove(struct spi_device *spi)
{
	struct lan865x_priv *priv = spi_get_drvdata(spi);

	phy_stop(priv->phydev);
	phy_disconnect(priv->phydev);
	mdiobus_unregister(priv->mdiobus);
	mdiobus_free(priv->mdiobus);
	unregister_netdev(priv->netdev);
	oa_tc6_deinit(priv->tc6);
	free_netdev(priv->netdev);

	// Deassert reset GPIO and release it
	if (priv->reset_gpio) {
		gpiod_set_value_cansleep(priv->reset_gpio, 0); // Deassert reset
		devm_gpiod_put(&spi->dev, priv->reset_gpio);
	}
}
